objects/pse__Utilization_Run_Batch__c.object
<CustomObject>
    <description>Stores the status and details of utilization run batch jobs.</description>
    <fields>
        <fullName>pse__Apex_Job_Id__c</fullName>
        <description>The ID for the Apex job executing the process.</description>
        <inlineHelpText>The ID for the Apex job executing the process.</inlineHelpText>
        <label>Apex Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Error__c</fullName>
        <description>If the status is &quot;Error&quot;, this includes information about the error.</description>
        <inlineHelpText>If the status is &quot;Error&quot;, this includes information about the error.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The current status of the batch job.</description>
        <inlineHelpText>The current status of the batch job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing Timecards (1 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Timecards (2 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Timecards (3 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Timecards (1 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Timecards (2 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Assignments (1 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Assignments (2 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Assignments (3 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Assignments (1 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Assignments (2 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Held Resource Requests (1 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Held Resource Requests (2 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Held Resource Requests (3 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Held Resource Requests (1 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Held Resource Requests (2 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Work Calendars (1 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Work Calendars (2 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Work Calendars (3 of 3)</fullName>
                </value>
                <value>
                    <fullName>Processing Work Calendars (1 of 2)</fullName>
                </value>
                <value>
                    <fullName>Processing Work Calendars (2 of 2)</fullName>
                </value>
                <value>
                    <fullName>Generating Utilization Results (1 of 3)</fullName>
                </value>
                <value>
                    <fullName>Generating Utilization Results (2 of 3)</fullName>
                </value>
                <value>
                    <fullName>Generating Utilization Results (3 of 3)</fullName>
                </value>
                <value>
                    <fullName>Generating Utilization Results (1 of 2)</fullName>
                </value>
                <value>
                    <fullName>Generating Utilization Results (2 of 2)</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Utilization_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the utilization run this utilization run batch relates to.</description>
        <inlineHelpText>Lookup to the utilization run this utilization run batch relates to.</inlineHelpText>
        <label>Utilization Run</label>
        <referenceTo>pse__Utilization_Run__c</referenceTo>
        <relationshipLabel>Utilization Run Batches</relationshipLabel>
        <relationshipName>Utilization_Run_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Utilization Run Batch</label>
    <nameField>
        <displayFormat>URB-{000000}</displayFormat>
        <label>Utilization Run Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Run Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>